# T-Code

./: .gitmodules  LICENSE  README.md  test.py
.github/workflows/: pico-build.yml
examples/ezbake_sim/: platformio.ini
examples/ezbake_sim/src/: main.cpp  main.ino
pcaps/: Minicom.pcapng  chrome.pcapng
simulator/: CMakeLists.txt  README.md  main.c
simulator/cmake/: gen_tcode_build_info.cmake  tcode_build_info.h.in
simulator/include/: FreeRTOSConfig.h  neopixel_ws2812.h  pindefs.h  ws2812.pio
simulator/lib/: freertos_support.c  neopixel_ws2812.c
simulator/lib/tcode/: tcode_line_parser.c  tcode_line_parser.h
simulator/lib/tcode_protocol/: README.md  library.properties  tcode_protocol.c  tcode_protocol.h
simulator/tasks/: neopixel_task.c  neopixel_task.h  serial_task.c  serial_task.h  sim_thermo_system_task.c  sim_thermo_system_task.h  status_led_task.c  status_led_task.h
